# exchange-core

./: pyproject.toml
.github/workflows/: auto-tag.yml  manual-release.yml
src/exchange_core/: __init__.py  hyperliquid.py  interface.py
